--- a/module1-fundamentals/css/pr-list.html
+++ b/module1-fundamentals/css/pr-list.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS pracyice</title>
+    <link rel="stylesheet"href="pr style.css">
 </head>
 <body>
     <h1>hello </h1>
